// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthCode renders 1`] = `
<div
  className="sc-cQIpJi jRzoLb"
  dir="ltr"
/>
`;

exports[`AuthCode renders Custom length 1`] = `
<div
  className="sc-cQIpJi jRzoLb"
  dir="ltr"
>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
      disabled={false}
    >
      <input
        className="sc-gbFqDM fgQzgA"
        dir="ltr"
        disabled={false}
        id="auth-code-part-0"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM fgQzgA"
        dir="ltr"
        disabled={true}
        id="auth-code-part-1"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM fgQzgA"
        dir="ltr"
        disabled={true}
        id="auth-code-part-2"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM fgQzgA"
        dir="ltr"
        disabled={true}
        id="auth-code-part-3"
        inputMode="text"
        maxLength={4}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`AuthCode renders Error state 1`] = `
<div
  className="sc-cQIpJi hsWjPb"
  dir="ltr"
>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn ggpwTJ"
      disabled={false}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={false}
        id="auth-code-part-0"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={true}
        id="auth-code-part-1"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={true}
        id="auth-code-part-2"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={true}
        id="auth-code-part-3"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={true}
        id="auth-code-part-4"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-iOnGvX joMFZu"
  >
    <div
      className="sc-bKOxAn gbJwSj"
      disabled={true}
    >
      <input
        className="sc-gbFqDM gyVdQG"
        dir="ltr"
        disabled={true}
        id="auth-code-part-5"
        inputMode="text"
        maxLength={6}
        onChange={[Function]}
        pattern="[a-z0-9]*"
        placeholder=""
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    className="sc-gmSHEY hfjWUm"
  >
    <p
      className="sc-eEXVIU jwGLLu"
      color="chiChi.100"
      size={12}
    >
      Provided value is not valid!
    </p>
  </div>
</div>
`;

exports[`AuthCode renders Only digits 1`] = `
<div
  className="sc-cQIpJi jRzoLb"
  dir="ltr"
/>
`;
